# cmake_notes

0001_simple_project/sources/: CMakeLists.txt  main.cpp
0002_multiple_directories_project/project/: CMakeLists.txt
0002_multiple_directories_project/project/inc/: action.h
0002_multiple_directories_project/project/src/: action.cpp  main.cpp
0003_multiple_modules_project/project/: CMakeLists.txt  main.cpp
0003_multiple_modules_project/project/module1/: CMakeLists.txt
0003_multiple_modules_project/project/module1/inc/: module1_1.h  module1_2.h
0003_multiple_modules_project/project/module1/src/: module1_1.cpp  module1_2.cpp
0003_multiple_modules_project/project/module2/: CMakeLists.txt
0003_multiple_modules_project/project/module2/inc/: module2_1.h
0003_multiple_modules_project/project/module2/src/: module2_1.cpp
0003_multiple_modules_project/project/module3/: CMakeLists.txt
0003_multiple_modules_project/project/module3/inc/: module3_1.h
0003_multiple_modules_project/project/module3/src/: module3_1.cpp
